--- a/styles.css
+++ b/styles.css
@@ -535,3 +535,16 @@ body{
 .download a:hover{
   color: #7f7f7f;
 }
+.social-media{
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+}
+.social-media ul{
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.social-media ul li i{
+  font-size: 24px;
+}
